💄 create MusicSection component

--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -6,102 +6,76 @@ $heading-font-family: 'Bebas Neue', sans-serif;
   $body-font-family: $body-font-family,
   $heading-font-family: $heading-font-family,
 
-  //   $typography: (
-  //     'h1': (
-  //       'font-family': $heading-font-family,
-  //       'weight': 700,
-  //       'size': 97px,
-  //       'line-height': 112px,
-  //       'letter-spacing': -1.5px
-  //     ),
-  //     'h2': (
-  //       'weight': 700,
-  //       'size': 61px,
-  //       'line-height': 72px,
-  //       'letter-spacing': -0.5px
-  //     ),
-  //     'h3': (
-  //       'weight': 700,
-  //       'size': 48px,
-  //       'line-height': 56px
-  //     ),
-  //     'h4': (
-  //       'weight': 700,
-  //       'size': 34px,
-  //       'line-height': 36px,
-  //       'letter-spacing': 0.25px
-  //     ),
-  //     'h5': (
-  //       'weight': 700,
-  //       'size': 24px,
-  //       'line-height': 24px
-  //     ),
-  //     'h6': (
-  //       'weight': 700,
-  //       'size': 20px,
-  //       'line-height': 24px,
-  //       'letter-spacing': 0.15px
-  //     ),
-  //     'subtitle-1': (
-  //       'weight': 400,
-  //       'size': 16px,
-  //       'line-height': 24px,
-  //       'letter-spacing': 0.15px
-  //     ),
-  //     'subtitle-2': (
-  //       'weight': 500,
-  //       'size': 14px,
-  //       'line-height': 24px,
-  //       'letter-spacing': 0.1px
-  //     ),
-  //     'body-1': (
-  //       'weight': 800,
-  //       'size': 20px,
-  //       'line-height': 24px,
-  //       'letter-spacing': 0.5px
-  //     ),
-  //     'body-2': (
-  //       'weight': 400,
-  //       'size': 14px,
-  //       'line-height': 20px,
-  //       'letter-spacing': 0.25px
-  //     ),
-  //     'button': (
-  //       'weight': 700,
-  //       'size': 16px,
-  //       'line-height': 16px,
-  //       'letter-spacing': 1.25px,
-  //       'text-transform': none
-  //     ),
-  //     'caption': (
-  //       'weight': 400,
-  //       'size': 12px,
-  //       'line-height': 16px,
-  //       'letter-spacing': 0.4px
-  //     ),
-  //     'overline': (
-  //       'weight': 700,
-  //       'size': 10px,
-  //       'line-height': 16px,
-  //       'letter-spacing': 1.5px,
-  //       'text-transform': uppercase
-  //     )
-  //   ),
+  $typography: (
+    'h2': (
+      'size': 72px
+    )
+  )
 );
 
+// overrides
+.v-card {
+  border-radius: 0 !important;
+}
+// custom classes
+.flat-shadow {
+  box-shadow: rgb(74 72 61 / 27%) 10px 10px 0px;
+}
+.bg-hero {
+  height: 100vh;
+  background-image: url('@/assets/hero_image_desktop.avif');
+  background-position: center;
+  background-size: cover;
+  opacity: 0.8;
+  animation: animatedBgHero 15s ease-in-out infinite alternate;
+
+  @media screen and (max-width: 600px) {
+    background-image: url('@/assets/hero_image_mobile.avif');
+    opacity: 1;
+    animation: none;
+  }
+}
 .bg-debris {
   background-image: url('@/assets/debris-bg.large.avif');
   background-size: cover;
-  animation: animatedBackground 12s ease-in-out infinite alternate;
+  animation: animatedBgDebris 15s ease-in-out infinite alternate;
+
+  @media screen and (max-width: 600px) {
+    animation-duration: 60s;
+  }
+}
+.pulse {
+  animation: pulse 0.5s ease;
 }
 
-@keyframes animatedBackground {
+// animations
+@keyframes animatedBgHero {
   from {
-    background-position: 0% 0%;
+    background-size: 100%;
   }
   to {
-    background-position: 0% 100%;
+    background-size: 105%;
+  }
+}
+@keyframes animatedBgDebris {
+  from {
+    background-position: 100% 100%;
+  }
+  to {
+    background-position: 0% 0%;
+  }
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
+// fonts import
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=JetBrains+Mono:wght@100..800&display=swap');
