--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -44,6 +44,26 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     animation-duration: 60s;
   }
 }
+.bg-pattern {
+  position: relative;
+  z-index: 0;
+}
+.bg-pattern::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('@/assets/pattern.avif');
+  background-size: contain;
+  background-position: center;
+  background-repeat: repeat;
+  opacity: 0.01;
+  z-index: -1;
+  pointer-events: none;
+}
+
 .pulse {
   animation: pulse 0.5s ease;
 }
@@ -78,4 +98,4 @@ $heading-font-family: 'Bebas Neue', sans-serif;
 }
 
 // fonts import
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=JetBrains+Mono:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=JetBrains+Mono:wght@100..800&Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
