--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -97,6 +97,37 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     }
   }
 }
+.bg-red {
+  background-color: rgb(var(--v-theme-black));
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    opacity: 0.9;
+    z-index: -1;
+
+    @media screen and (max-width: 959px) {
+      background-image: url('@/assets/backgrounds/small/bg_red-sm.avif');
+      opacity: 1;
+      animation: none;
+    }
+    @media screen and (min-width: 960px) and (max-width: 1279px) {
+      background-image: url('@/assets/backgrounds/medium/bg_red-md.avif');
+    }
+    @media screen and (min-width: 1280px) {
+      background-image: url('@/assets/backgrounds/large/bg_red-lg.avif');
+    }
+  }
+}
 .bg-paper {
   background-color: rgb(var(--v-theme-brown-lighten-5));
   position: relative;
