--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -14,9 +14,6 @@ $heading-font-family: 'Bebas Neue', sans-serif;
 );
 
 // overrides
-.v-card {
-  border-radius: 0 !important;
-}
 .v-container {
   @media (max-width: 999px) {
     padding-left: 8px;
@@ -98,7 +95,7 @@ $heading-font-family: 'Bebas Neue', sans-serif;
   }
 }
 .bg-red {
-  background-color: rgb(var(--v-theme-black));
+  background-color: rgb(var(--v-theme-red-darken-1));
   position: relative;
   z-index: 0;
 
@@ -112,6 +109,7 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
+    background-attachment: fixed;
     opacity: 0.9;
     z-index: -1;
 
