--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -22,8 +22,19 @@ $heading-font-family: 'Bebas Neue', sans-serif;
   @media (min-width: 1920px) {
     max-width: 1480px;
   }
+  @media (min-width: 960px) {
+    max-width: 1070px;
+  }
 }
 // custom classes
+.text-body-3 {
+  font-size: 0.75rem !important;
+  font-weight: 350;
+  line-height: 1.425;
+  letter-spacing: 0.0178571429em !important;
+  font-family: 'JetBrains Mono', sans-serif;
+  text-transform: none !important;
+}
 .flat-shadow {
   box-shadow: rgb(74 72 61 / 27%) 10px 10px 0px;
   transition: all 0.3s ease-in-out;
