--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -23,6 +23,7 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     max-width: 1480px;
   }
 }
+
 // custom classes
 .text-body-3 {
   font-size: 0.75rem !important;
@@ -194,6 +195,78 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     }
   }
 }
+.bg-pattern {
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
+    opacity: 0.015;
+    z-index: -1;
+
+    @media screen and (max-width: 959px) {
+      background-image: url('@/assets/backgrounds/small/pattern-sm.avif');
+      animation-duration: 60s;
+    }
+    @media screen and (min-width: 960px) and (max-width: 1279px) {
+      background-image: url('@/assets/backgrounds/medium/pattern-md.avif');
+    }
+    @media screen and (min-width: 1280px) {
+      background-image: url('@/assets/backgrounds/large/pattern-lg.avif');
+    }
+  }
+}
+.bg-black-grain {
+  background-color: rgb(var(--v-theme-black));
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
+    opacity: 0.5;
+    z-index: -1;
+
+    background-image: url('@/assets/backgrounds/large/bg_black_grain-lg.png');
+  }
+}
+.bg-black-texture {
+  background-color: rgb(var(--v-theme-black));
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    opacity: 0.2;
+    z-index: -1;
+
+    background-image: url('@/assets/backgrounds/large/bg_black_texture-lg.png');
+  }
+}
+
 .bg-transparent {
   background: transparent !important;
 }
