--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -59,19 +59,34 @@ $heading-font-family: 'Bebas Neue', sans-serif;
     background-image: url('/backgrounds/large/bg_hero_fossil-lg.avif');
   }
 }
-.bg-debris {
-  background-size: cover;
-  animation: animatedBgDebris 30s ease-in-out infinite alternate;
+.bg-fromnothing {
+  background-color: rgb(var(--v-theme-black));
+  position: relative;
+  z-index: 0;
 
-  @media screen and (max-width: 959px) {
-    background-image: url('/backgrounds/small/bg_debris-sm.avif');
-    animation-duration: 60s;
-  }
-  @media screen and (min-width: 960px) and (max-width: 1279px) {
-    background-image: url('/backgrounds/medium/bg_debris-md.avif');
-  }
-  @media screen and (min-width: 1280px) {
-    background-image: url('/backgrounds/large/bg_debris-lg.avif');
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+    opacity: 0.25;
+    z-index: -1;
+
+    @media screen and (max-width: 959px) {
+      background-image: url('/backgrounds/small/bg_fromnothing-sm.avif');
+      animation-duration: 60s;
+    }
+    @media screen and (min-width: 960px) and (max-width: 1279px) {
+      background-image: url('/backgrounds/medium/bg_fromnothing-md.avif');
+    }
+    @media screen and (min-width: 1280px) {
+      background-image: url('/backgrounds/large/bg_fromnothing-lg.avif');
+    }
   }
 }
 .bg-pattern {
