--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -322,4 +322,4 @@ $heading-font-family: 'Bebas Neue', sans-serif;
 }
 
 // fonts import
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=JetBrains+Mono:wght@100..800&Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=JetBrains+Mono:wght@100..800&Open+Sans:ital,wght@0,300..800;1,300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
